# zero2prod

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: general.yml
migrations/: 20240928190121_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: greet.rs  health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
