[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-macros = "2.4.0"

# Dev dependencies are  used exclusively when running tests or examples,
# they do not get included in the final application binary.
[dev-dependencies]
reqwest = "0.11"
